[package]
version = "0.1.0"
name = "strava-spa"
repository = "https://github.com/tjchambers32/strava-spa"
authors = ["Travis Chambers <tjchambers32@gmail.com>"]
description = "Simple application to display Strava yearly running metrics."
categories = []
license = "MIT"
readme = "./README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
chrono = "0.4.19"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
